--- a/workshop/templates/workshop/base.html
+++ b/workshop/templates/workshop/base.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="{% static 'workshop/lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static 'workshop/css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
   <!-- <link href="{% static 'workshop/lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"> -->
