change part of style

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -47,7 +47,7 @@
             
 
             
-              <button type="submit" class="btn btn-large">Envoyer votre message</button>
+              <button type="submit" class="btn-pimary btn-large pull-right">Envoyer votre message</button>
            
 
           </form>
