--- a/workshop/templates/workshop/accueil.html
+++ b/workshop/templates/workshop/accueil.html
@@ -13,7 +13,7 @@
           </div>
           <h1>Bonjour, je suis zébra385 </h1>
           <h1>Freelance Développeur Full-Stack Python! </h1>
-          <p> Ce site pour présenter mes réalisations et mon parcourt.
+          <p> Ce site pour présenter mes réalisations et mon parcours.
         </div>
         
       </div>
