--- a/workshop/templates/workshop/work.html
+++ b/workshop/templates/workshop/work.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-lg-4">
           <a href="{% url 'workshop:work02' %}"><img class="img-responsive" src="{% static 'workshop/img/portfolio/PureBeurre.png' %}" alt="" /></a>
-          <p>PureBeurre</p>
+          <p>PurBeurre</p>
         </div>
         <div class="col-lg-4">
           <a href="{% url 'workshop:work03' %}"><img class="img-responsive" src="{% static 'workshop/img/portfolio/Grandpybot.png' %}" alt="" /></a>
