--- a/workshop/templates/workshop/work01.html
+++ b/workshop/templates/workshop/work01.html
@@ -12,7 +12,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>TBD</h3>
         <hr>
-        <p>Ce site est le projet final de ma formation de développeur. C'est la vitrine de l'asociation la Terre au Bout des Doigts. J'y suis bénévole et administrateur du site web.</p>
+        <p>Ce site est le projet final de ma formation de développeur. C'est la vitrine de l'association la Terre au Bout des Doigts où je suis un des bénévoles et l'administrateur.</p>
       </div>
     </div>
     <div class="row mt centered">
@@ -21,11 +21,10 @@
       </div>
       <div class="row mt ">
         <div class="col-lg-8 col-lg-offset-2 centered">
-          <p>Celui-ci permet de renseigner les internautes sur les créneaux de cours possibles, avec un portefolio des réalisations et les dates des séances arrétées sur l'année.
+          <p>Ce site permet de renseigner les internautes sur les créneaux de cours possibles, avec un portefolio des réalisations et les dates des séances arrêtées sur l'année.
             Il permet aussi uniquement à la cinquantaine d'adhérents de se connecter pour pouvoir faire un échange  de séances avec un adhérent sur un autre groupe.
-            La vidéo de démo permet d'expliquer aux adhérents comment utiliser le site.
           </p>
-          <p>Une vidéo d'explication a été réalisé pour les adhérents du site : <a href="https://drive.google.com/file/d/1bv90R82o8SK4z31lcEZZcLnaOYLyRfR5/view?usp=sharing">Démo </a>
+          <p>Une vidéo d'explication a été réalisée pour les adhérents du site : <a href="https://drive.google.com/file/d/1bv90R82o8SK4z31lcEZZcLnaOYLyRfR5/view?usp=sharing">Démo </a>
           </p>
           <p >
             <bt>Lien: <a  href="https://terreboutdoigts.fr/">Site_TBD</a></bt>
