--- a/workshop/templates/workshop/work03.html
+++ b/workshop/templates/workshop/work03.html
@@ -12,7 +12,7 @@
       <div class="col-lg-6 col-lg-offset-3 centered">
         <h3>Grandpybot</h3>
         <hr>
-        <p>Ce site permet de connaitre l'adresse d'un lieu. Papy Robot raconte une histoire sur le lieu!</p>
+        <p>Ce site permet de connaitre l'adresse d'un lieu</p>
       </div>
     </div>
     <div class="row mt centered">
@@ -21,7 +21,7 @@
       </div>
       <div class="row mt ">
         <div class="col-lg-8 col-lg-offset-2 centered">
-        <p>Celui-ci indique l'adresse d'un lieu, qu'il prècise sur une carte Google maps. 
+        <p>Ce site indique l'adresse d'un lieu, qu'il précise sur une carte Google maps. 
             Enfin Grandbybot raconte une petite histoire sur un terme de l'adresse.
         </p>
         <p>
