--- a/workshop/templates/workshop/parcourt.html
+++ b/workshop/templates/workshop/parcourt.html
@@ -3,16 +3,16 @@
     <div class="container" id='Parcourt'>
         <div class="row mt">
             <div class="col-lg-8 col-lg-offset-2 centered">
-                <h1>Mon parcourt</h1>
+                <h1>Mon parcours</h1>
                 <hr>
                 <h3>Renaissance de ma vocation pour l'informatique! </h3>
                 <p> J'ai toujours été attiré et passionné par l'informatique.
-                    Mon premier ordinateur à 19 ans avec les langages basiqe et turboPascal.
+                    Je me suis acheté mon premier ordinateur à 19 ans, j'utilisais les langages basique et turboPascal.
                     Mais mes études et les aléas de la vie m'ont conduit vers l'enseignement des Sciences Physiques.
-                    Puis il ya a quatre ans, l'informatique et les sciences du numérique sont entrés dans les programmes de lycée. 
+                    Puis il y a quatre ans, l'informatique et les sciences du numérique sont entrés dans les programmes de lycée. 
                     J'ai pu m'investir dans les différents codages(HTML, CSS et Python) afin d'enseigner cette nouvelle option en classe de seconde.
-                    C'est en 2019 que j'ai décidé de ma reconversion. J'ai pour cela suivi via la plateforme <a href="https://openclassrooms.com/fr/" style="color:#04b4e0;">Openclassrooms</a>, une formation de développeur python.
-                    Aujourd'hui je propose mes services aux entreprises comme Développeur Freelance Python.
+                    C'est en 2019 que j'ai décidé de ma reconversion. J'ai pour cela suivi, via la plateforme <a href="https://openclassrooms.com/fr/" style="color:#04b4e0;">Openclassrooms</a>, une formation de développeur python.
+                    Aujourd'hui, je propose mes services aux entreprises comme Développeur Freelance Python.
                 </p>
         </div>
         </div>
