--- a/workshop/templates/workshop/work.html
+++ b/workshop/templates/workshop/work.html
@@ -1,4 +1,4 @@
-{% extends "workshop/base.html" %}
+
 
 {% block title %}Mes réalisations{% endblock %}
 {% block content %}
@@ -6,10 +6,10 @@
 
   <!-- +++++ Projects Section +++++ -->
 
-  <div class="container pt">
+  <div class="container pt" id="Mesrealisations">
     <div class="row mt">
       <div class="col-lg-6 col-lg-offset-3 centered">
-        <h3>Mes Réalisations</h3>
+        <h1>Mes Réalisations</h1>
         <hr>
         <p>Pour le détail de mes travaux cliquer sur les images </p>
       </div>
