--- a/workshop/templates/workshop/parcourt.html
+++ b/workshop/templates/workshop/parcourt.html
@@ -1,6 +1,6 @@
 <!-- +++++ Parcourt Section +++++ -->
-<div id="ww">
-    <div class="container" id='Parcourt'>
+
+    <div class="container pt" id='Parcourt'>
         <div class="row mt">
             <div class="col-lg-8 col-lg-offset-2 centered">
                 <h1>Mon parcours</h1>
@@ -11,10 +11,9 @@
                     Mais mes études et les aléas de la vie m'ont conduit vers l'enseignement des Sciences Physiques.
                     Puis il y a quatre ans, l'informatique et les sciences du numérique sont entrés dans les programmes de lycée. 
                     J'ai pu m'investir dans les différents codages(HTML, CSS et Python) afin d'enseigner cette nouvelle option en classe de seconde.
-                    C'est en 2019 que j'ai décidé de ma reconversion. J'ai pour cela suivi, via la plateforme <a href="https://openclassrooms.com/fr/" style="color:#04b4e0;">Openclassrooms</a>, une formation de développeur python.
+                    C'est en 2019 que j'ai décidé de ma reconversion. J'ai pour cela suivi, via la plateforme <a href="https://openclassrooms.com/fr/">Openclassrooms</a>, une formation de développeur python.
                     Aujourd'hui, je propose mes services aux entreprises comme Développeur Freelance Python.
                 </p>
         </div>
         </div>
     </div>
-</div>
