Add logo sshdevlop

--- a/contact/templates/contact/confirm_message_send.html
+++ b/contact/templates/contact/confirm_message_send.html
@@ -6,14 +6,17 @@
 
 
     <!-- +++++ Contact Section +++++ -->
-
-    <div class="container pt">
-        <div class="row mt">
-            <div class="col-lg-6 col-lg-offset-3 centered">
-            <h3>Mme/M.{{your_name}}</h3>
-            <hr>
-            <p>Nous vous confirmons l'envoi de votre message</p>
-            </div>
-            </div>
+    <div id="wb">
+        <div class="container pt">
+            <div class="row mt">
+                <div class="col-lg-6 col-lg-offset-3 centered">
+                <h3>Mme/M.{{your_name}}</h3>
+                <hr>
+                <p>Nous vous confirmons l'envoi de votre message</p>
+                <hr>
+                <p>Une copie vous a été adressée</p>
+                </div>
+                </div>
+        </div>
     </div>
 {% endblock %}
