--- a/workshop/templates/workshop/accueil.html
+++ b/workshop/templates/workshop/accueil.html
@@ -5,9 +5,9 @@
 	{% load static %}
   {% load i18n static %}
   {% load cookielaw_tags %}
-  {% include 'cookielaw/banner.html'%}
+  {% cookielaw_banner%}
   <!-- +++++ Welcome Section +++++ -->
-  <div id="ww">
+  <div id="wb">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
@@ -16,7 +16,7 @@
           </div>
           <h1>Bonjour, je suis zébra385 </h1>
           <h1>Freelance Développeur Full-Stack Python! </h1>
-          <p> Ce site pour présenter mes réalisations et mon parcours.
+          <p> Ce site présente mes réalisations et mon parcours.
         </div>
         
       </div>
@@ -28,7 +28,7 @@
   <!-- Mesoutils -->
 
   <!-- Skills & Certificates -->
-  <div id="ww">
+  <div id="wb">
     <div class="container pt" id="Mesoutils">
       <div class="row mt">
         <div class="col-lg-8 col-lg-offset-2 centered">
@@ -154,7 +154,7 @@
   {% include 'workshop/parcourt.html' %}
   
   <!-- /container -->
-<div id="ww">
+<div id="wb">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 centered">
