--- a/workshop/templates/workshop/base.html
+++ b/workshop/templates/workshop/base.html
@@ -9,8 +9,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="{% static 'workshop/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'workshop/img/apple-touch-icon.png'%}" rel="apple-touch-icon">
+  <link href="{% static 'workshop/img/logo_sshdevlop.ico' %}" rel="icon">
+  <link href="{% static 'workshop/img/logo_sshdevlop.png'%}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet">
@@ -37,14 +37,14 @@
 
   <!-- Static navbar -->
   <div class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
+    <div class="container ">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{% url 'workshop:accueil' %}">SSHDEVLOP</a>
+        <a class="navbar-brand " href="{% url 'workshop:accueil' %}"><img width="250px" src="{% static 'workshop/img/logo_sshdevlop.png' %}" href="/" title="Accueil" alt="Accueil"/></a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
